style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

:root {
    --sidebar-color: #41b3a3;
    --background-color: #e6f7ff;
    --trim-color: #c38d9e;
}

* {
    box-sizing: border-box;
}

html, body {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
}

.container {
    display: grid;
    grid-template-columns: 0.9fr 5.1fr;
    grid-template-rows: 1fr 5fr;
    height: 100vh;
}

.sidebar {
    background-color: var(--sidebar-color);
    grid-row: span 2;
    display: grid;
    grid-template-columns: 1;
    justify-items: left;
    align-content: start;
    color: white;
}

.branding {
    display: flex;
    align-items: center;
    margin-left: 10px;
    margin-top: 10px;
    margin-right: 20px;
}

.branding img {
    height: 60px;
    width: 60px;
}

.sidebar ul {
    list-style: none;
    padding: 0;
}

.sidebar li {
    text-align: left;
}

.nav-item {
    display: flex;
    align-items: center;
    padding: 5px 10px;
    font-weight: bold;
    font-size: 1.2em;
    margin-left: 10px;
}

.nav-item a {
    text-decoration: none;
    color: inherit;
}

.nav-item img {
    width: 24px;
    height: 24px;
    margin-right: 18px;
    vertical-align: middle;
}

.header {
    grid-column: 2;
    background-color: white;
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr 1fr;
    box-shadow: 1px 1px 5px gray;
    padding-bottom: 15px;
}

.search-container {
    padding: 30px;
}

.search-bar {
    display: flex;
    align-items: center;
}

.search-bar input {
    background-color: var(--background-color);
    border-radius: 10px;
    height: 30px;
    width: 100%;
    border: none;
    box-shadow: 1px 1px 5px gray;
    padding: 5px;
    padding-left: 20px;
    color: darkslategray;
    font-weight: bold;
    font-size: 15px;
    line-height: 30px;
}

.search-bar input:focus {
    outline: none;
}

.search-bar img {
    height: 30px;
    width: 30px;
    margin-right: 10px;
}

.user-greeting {
    display: flex;
    align-items: center;
    padding-left: 30px;
}

.user-greeting * {
    margin: 0;
}

.user-greeting img {
    margin-right: 20px;
}

.user-greeting .username {
    color: darkslategray;
}

.button-container {
    display: grid;
    grid-template-rows: 1fr;
    justify-content: end;
    align-items: center;
    gap: 30px;
    height: 100%;
    margin-right: 30px;
}

.button-container button {
    background-color: var(--sidebar-color);
    border: none;
    color: white;
    font-weight: bold;
    font-size: 0.9em;
    padding: 10px;
    border-radius: 10px;
    width: 100px;
    cursor: pointer;
    grid-row: 1;
}

.user-info {
    display: flex;
    align-items: center;
    justify-content: end;
}

.user-info > * {
    margin-right: 40px;
}

.user-info div {
    display: flex;
    align-items: center;
}

.user-info img {
    height: 30px;
    width: 30px;
}

.user-info .profile-pic {
    height: 40px;
    width: 40px;
    margin-right: 10px;
}

.main-content {
    grid-column: 2;
    background-color: var(--background-color);
    display: grid;
    grid-template-columns: 2.2fr 0.8fr;
    grid-template-rows: 1fr 1fr;
    box-shadow: 1px 1px 5px gray;
}

.projects-container, .announcements-container, .trending-container {
    padding: 20px;
}

.projects-container {
    grid-row: span 2;
    display: grid;
    gap: 20px;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    overflow: auto;
    justify-content: center;
}

.projects-container * {
    margin: 0;
}

.projects-container h2 {
    grid-column: 1 / -1;
}

.projects-container .card {
    background-color: white;
    border-left: 10px solid var(--trim-color);
    height: 200px;
    padding: 10px;
    border-radius: 10px;
    box-shadow: 1px 1px 10px gray;
    color: darkslategray;
}

.projects-container .card p.title {
    color: black;
}

.projects-container .title {
    font-weight: bold;
}

.announcements-container h2, .trending-container h2 {
    margin-top: 0;
}

.announcements {
    background-color: white;
    padding: 30px;
    border-radius: 10px;
    box-shadow: 1px 1px 10px gray;
}

.announcements * {
    margin: 0;
}

.announcements hr {
    margin-top: 20px;
    margin-bottom: 20px;
}

.announcements p {
    color: darkslategray;
}

.trending-items {
    background-color: white;
    padding: 10px;
    border-radius: 10px;
    box-shadow: 1px 1px 10px gray;
}

.trending-items ul {
    list-style: none;
}

.trending-items li {
    display: grid;
    grid-template-columns: auto 1fr;
    grid-template-rows: 1fr 1fr;
    padding: 5px;
    align-items: center;
    justify-content: center;
    gap: 0;
    margin-bottom: 10px;
}

.trending-items .title {
    color: slategray;
}

.trending-items li img {
    grid-row: 1 / span 2;
    height: 50px;
    width: 50px;
    margin-right: 10px;
}

.profile-pic {
    border-radius: 50%;
    max-height: 100px;
    max-width: 100px;
    border: 1px solid black;
}

